SERVER-17167 restore multiline functionality in shell

Revert "SERVER-5399 SERVER-16946 fixed shell helper parsing"

This reverts commit 2d397b55c3207e875b6085944799b3c243ff4cf3.